<resources>
    <string name="app_name">FIT - Task Management</string>
    <string name="title_home">Hồ sơ của tôi</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Thông báo</string>
    <string name="button_login">Đăng nhập</string>
    <string name="hint_password">Nhập mật khẩu</string>
    <string name="hint_username">Nhập tên</string>
    <string name="title_tasklist">Danh sách</string>
    <string name="work_title">Công việc</string>
    <string name="deadline">Deadline</string>
    <string name="taskStatus">Trạng thái công việc</string>
    <string name="taskName">Tên công việc</string>
    <string name="taskStartDate">Ngày bắt đầu</string>
    <string name="taskEndDate">Ngày kết thúc</string>
    <string name="titleLogin">Đăng nhập</string>
    <string name="taskDescription">Mô tả công việc</string>
    <string name="tvTaskTitle">Tiêu đề công  việc</string>

    <string-array name="taskValues">
        <item>Assigned</item>
        <item>Canceled</item>
        <item>Done</item>
        <item>Declined</item>
        <item>In progress</item>
        <item>Peding</item>
    </string-array>
</resources>