<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.projecttask.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.projecttask.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.projecttask.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_taskDetailFragment"
            app:destination="@id/taskDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.projecttask.ui.home.LoginFragment"
        tools:layout="@layout/fragment_login"
        android:label="LoginFragment" >
        <action
            android:id="@+id/action_loginFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/taskListFragment"
        android:name="com.example.projecttask.ui.task.TaskListFragment"
        android:label="Danh sách công việc"
        tools:layout="@layout/fragment_task_list" />
    <fragment
        android:id="@+id/taskDetailFragment"
        android:name="com.example.projecttask.ui.task.TaskDetailFragment"
        android:label="TaskDetailFragment"
        tools:layout="@layout/fragment_task_detail"/>
</navigation>